# home-automation

./: .dockerignore  .env.example  .gitignore  API_README.md  DOCKER_SETUP.md  Dockerfile  FRONTEND_SETUP.md  GETTING_STARTED.md  LICENSE  Makefile  NETWORK_MONITOR_FIXES.md  QUICK_REFERENCE.md  README.md  RULES.md  docker-compose.yml  pyproject.toml  requirements.txt  test_sse.html
api-spec/: main.tsp  package.json
config/: plugins.yaml.example  system.yaml.example
config/rules/: example.yaml
eufy-bridge/: DEBUG-SUMMARY.md  Dockerfile  ISSUE-RTSP-STREAMING.md  debug-camera.js  package-lock.json  package.json  server.js
examples/: custom_plugin.py  external_plugin.js
frontend/: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  README.md  SSE_FIX_SUMMARY.md  package-lock.json  package.json  start.sh  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend-backup/: package.json
frontend-backup/src/: App.tsx
frontend/src/: App.tsx  index.css
maneyantra/: __init__.py  main.py
maneyantra/api/: __init__.py  app.py  models.py  server.py
maneyantra/core/: __init__.py  config.py  manager.py  mqtt_bus.py  plugin.py  rabbitmq_bus.py
maneyantra/plugins/: __init__.py
maneyantra/types/: __init__.py  (+1 more)
scripts/: TESTING_GUIDE.md  add_test_devices.py  allow_python_firewall.sh  docker-helper.sh  run_maneyantra_host.sh  setup.sh  setup_secrets.py  test_api.sh  test_e2e_integration.py  test_rabbitmq_connection.py  test_sse_connection.py  verify_tplink.py
tools/: identify_devices.py  rename_devices.py  test_refactored_network_monitor.py
(+66 files in other folders)
